# datafusion-udf-wasm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  WASM.md  deny.toml  rust-toolchain.nightly.toml  rust-toolchain.toml  tombi.toml  typos.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/free-disk-space/: action.yml  free.sh
.github/workflows/: automerge.yml  ci.yml  prebuild.yml
arrow2bytes/: Cargo.toml
arrow2bytes/src/: compression_check.rs  lib.rs
arrow2bytes/tests/: array.rs  datatype.rs
guests/: Justfile
guests/bundle/: Cargo.toml  build.rs
guests/bundle/src/: lib.rs
guests/evil/: Cargo.toml  Justfile  README.md
guests/evil/src/: common.rs  env.rs  fs.rs  lib.rs  net.rs  return_data.rs  root_fs.rs  runtime.rs
guests/evil/src/complex/: error.rs  many_inputs.rs  mod.rs  params_long_name.rs  params_many.rs  return_type.rs  return_value.rs  udf_long_name.rs  udfs_duplicate_names.rs  udfs_many.rs
guests/evil/src/root/: invalid_entry.rs  large_file.rs  many_files.rs  mod.rs  not_tar.rs  path_long.rs  sparse.rs  tar_too_large.rs  unsupported_entry.rs
guests/evil/src/spin/: mod.rs  root.rs  udf_invoke.rs  udf_name.rs  udf_return_type_exact.rs  udf_return_type_other.rs  udf_signature.rs  udfs.rs
guests/python/: .gitignore  Cargo.toml  DEVELOPMENT.md  Justfile  README.md  build.rs  requirements.txt
guests/python/benches/: wrapper.rs
guests/python/src/: conversion.rs  error.rs  inspect.rs  lib.rs  root_fs.rs  signature.rs  wasi_symbols.rs
guests/python/src/python_modules/: error.rs  mod.rs
guests/rust/: Cargo.toml  Justfile  README.md
guests/rust/examples/: add_one.rs  sub_str.rs
guests/rust/src/: bindings.rs  conversion.rs  example.rs  lib.rs  wrapper.rs
host/: Cargo.toml
host/benches/: udf_overhead.rs
host/src/: bindings.rs  compilation_cache.rs  component.rs  conversion.rs  error.rs  http.rs  ignore_debug.rs  lib.rs  limiter.rs  linker.rs  permissions.rs  state.rs  tokio_helpers.rs  udf.rs  udf_query.rs  vfs.rs
host/src/conversion/: async_from.rs  limits.rs  mod.rs  resource_cache.rs
host/src/http/: config.rs  dns.rs  mod.rs  tls.rs  types.rs
host/src/http/validator/: allow_certain.rs  mod.rs  reject_all.rs
host/src/test_utils/: mod.rs  python.rs
host/src/vfs/: limits.rs  mod.rs  path.rs
host/tests/: add_one.rs  integration.rs  python.rs
host/tests/integration_tests/: mod.rs  python.rs  rust.rs  test_utils.rs  udf_query.rs
host/tests/integration_tests/evil/: complex.rs  env.rs  fs.rs  mod.rs  net.rs  return_data.rs  root.rs  runtime.rs  spin.rs  test_utils.rs
host/tests/integration_tests/python/: argument_forms.rs  examples.rs  mod.rs  state.rs  test_utils.rs
host/tests/integration_tests/python/inspection/: errors.rs  filter.rs  mod.rs
host/tests/integration_tests/python/runtime/: dependencies.rs  env.rs  errors.rs  fs.rs  http.rs  mod.rs  null_handling.rs
host/tests/integration_tests/python/runtime/http/: mock_ca.rs  mock_resolver.rs  mock_server.rs  mod.rs  test_utils.rs
host/tests/integration_tests/python/types/: bool.rs  bytes.rs  date.rs  datetime.rs  float.rs  int.rs  mod.rs  none.rs  str.rs  time.rs  timedelta.rs  union.rs
python-tooling/: README.md  pyproject.toml
python-tooling/src/datafusion_udf_wasm_tooling/: analyze_udf_overhead_bench.py
query/: Cargo.toml
query/src/: lib.rs
query/src/format/: mod.rs  python.rs
query/tests/: integration.rs
query/tests/integration_tests/python/: test_utils.rs
wit/: world.wit
wit-bindings/: Cargo.toml
wit-bindings/src/: lib.rs
