[workspace]
resolver = "3"
members = [
  "arrow2bytes",
  "guests/bundle",
  "guests/python",
  "guests/rust",
  "host",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
arrow = { version = "55.2.0", default-features = false, features = ["ipc"] }
chrono = { version = "0.4.42", default-features = false }
datafusion = { version = "49.0.1", default-features = false }
datafusion-common = { version = "49.0.1", default-features = false }
datafusion-expr = { version = "49.0.1", default-features = false }
datafusion-sql = { version = "49.0.1", default-features = false }
datafusion-udf-wasm-arrow2bytes = { path = "arrow2bytes", version = "0.1.0" }
datafusion-udf-wasm-bundle = { path = "guests/bundle", version = "0.1.0" }
datafusion-udf-wasm-guest = { path = "guests/rust", version = "0.1.0" }
datafusion-udf-wasm-python = { path = "guests/python", version = "0.1.0" }
http = { version = "1.3.1", default-features = false }
hyper = { version = "1.7", default-features = false }
pyo3 = { version = "0.27.1", default-features = false, features = ["macros"] }
sqlparser = { version = "0.55.0", default-features = false, features = [
  "std",
  "visitor"
] }
tar = { version = "0.4.44", default-features = false }
tempfile = { version = "3.23.0", default-features = false }
tokio = { version = "1.48.0", default-features = false }
wasip2 = { version = "1" }
wasmtime = { version = "38.0.3", default-features = false, features = [
  "async",
  "cranelift"
] }
wasmtime-wasi = { version = "38.0.3", default-features = false }
wasmtime-wasi-http = { version = "38.0.3", default-features = false, features = [
  "default-send-request"
] }
wasmtime-wasi-io = { version = "38.0.3", default-features = false }
wit-bindgen = { version = "0.47", default-features = false, features = [
  "macros"
] }

[workspace.lints.clippy]
allow_attributes = "warn"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
explicit_iter_loop = "deny"
future_not_send = "deny"
missing_docs_in_private_items = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
use_self = "deny"

[workspace.lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = "deny"
unreachable_pub = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"

[patch.crates-io]
# use same DataFusion fork as InfluxDB
# See https://github.com/influxdata/arrow-datafusion/pull/72
datafusion = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "8347a71f62d4fef8d37548f22b93877170039357" }
datafusion-common = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "8347a71f62d4fef8d37548f22b93877170039357" }
datafusion-expr = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "8347a71f62d4fef8d37548f22b93877170039357" }
datafusion-sql = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "8347a71f62d4fef8d37548f22b93877170039357" }

# faster tests
[profile.dev.package]
# improve wasmtime compilation speed
cranelift-codegen.opt-level = 3
cranelift-entity.opt-level = 3
cranelift-frontend.opt-level = 3
# faster insta snapshots
insta.opt-level = 3
regalloc2.opt-level = 3
similar.opt-level = 3
wasmparser.opt-level = 3
wasmtime-internal-cranelift.opt-level = 3
