[workspace]
resolver = "3"
members = [
  "arrow2bytes",
  "guests/bundle",
  "guests/evil",
  "guests/python",
  "guests/rust",
  "host",
  "query",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
arrow = { version = "56.2.0", default-features = false, features = ["ipc"] }
chrono = { version = "0.4.42", default-features = false }
datafusion = { version = "50.3.0", default-features = false }
datafusion-common = { version = "50.3.0", default-features = false }
datafusion-execution = { version = "50.3.0", default-features = false }
datafusion-expr = { version = "50.3.0", default-features = false }
datafusion-sql = { version = "50.3.0", default-features = false }
datafusion-udf-wasm-arrow2bytes = { path = "arrow2bytes", version = "0.1.0" }
datafusion-udf-wasm-bundle = { path = "guests/bundle", version = "0.1.0" }
datafusion-udf-wasm-evil = { path = "guests/evil", version = "0.1.0" }
datafusion-udf-wasm-guest = { path = "guests/rust", version = "0.1.0" }
datafusion-udf-wasm-host = { path = "host", version = "0.1.0" }
datafusion-udf-wasm-python = { path = "guests/python", version = "0.1.0" }
datafusion-udf-wasm-query = { path = "query", version = "0.1.0" }
http = { version = "1.4.0", default-features = false }
hyper = { version = "1.8", default-features = false }
insta = { version = "1.45.0", "default-features" = false }
log = { version = "0.4.29", default-features = false }
pyo3 = { version = "0.27.2", default-features = false, features = ["macros"] }
regex = { version = "1", default-features = false }
sqlparser = { version = "0.58.0", default-features = false, features = [
  "std",
  "visitor"
] }
tar = { version = "0.4.44", default-features = false }
target-lexicon = { version = "0.13", default-features = false }
tempfile = { version = "3.23.0", default-features = false }
tokio = { version = "1.48.0", default-features = false }
uuid = { version = "1.19.0", default-features = false, features = ["v4"] }
wasip2 = { version = "1" }
wasmtime = { version = "39.0.1", default-features = false, features = [
  "async",
  "cranelift"
] }
wasmtime-wasi = { version = "39.0.1", default-features = false }
wasmtime-wasi-http = { version = "39.0.1", default-features = false, features = [
  "default-send-request"
] }
wasmtime-wasi-io = { version = "39.0.0", default-features = false }
wit-bindgen = { version = "0.49", default-features = false, features = [
  "macros"
] }

[workspace.lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = "deny"
unreachable_pub = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"

[workspace.lints.clippy]
allow_attributes = "deny"
clone_on_ref_ptr = "deny"
comparison_chain = "deny"
dbg_macro = "deny"
explicit_iter_loop = "deny"
future_not_send = "deny"
missing_docs_in_private_items = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
semicolon_if_nothing_returned = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_semicolon = "deny"
unnecessary_wraps = "deny"
unused_async = "deny"
unused_self = "deny"
use_self = "deny"

# faster tests
[profile.dev.package]
# improve wasmtime compilation speed
cranelift-codegen.opt-level = 3
cranelift-entity.opt-level = 3
cranelift-frontend.opt-level = 3
# faster insta snapshots
insta.opt-level = 3
regalloc2.opt-level = 3
similar.opt-level = 3
wasmparser.opt-level = 3
wasmtime-internal-cranelift.opt-level = 3
