[package]
name = "datafusion-udf-wasm-host"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arrow.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion-udf-wasm-arrow2bytes.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

[dev-dependencies]
datafusion-udf-wasm-bundle = { workspace = true, features = ["example", "python"] }
insta = "1.43.2"
tokio = { workspace = true, features = ["fs", "macros"] }
wiremock = "0.6.5"
