[package]
name = "datafusion-udf-wasm-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
datafusion-common.workspace = true
datafusion-execution.workspace = true
datafusion-expr.workspace = true
datafusion-udf-wasm-arrow2bytes.workspace = true
http.workspace = true
hyper.workspace = true
log.workspace = true
rand = { version = "0.9" }
siphasher = { version = "1", default-features = false }
tar.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }
uuid.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi-io.workspace = true

[dev-dependencies]
datafusion-udf-wasm-bundle = { workspace = true, features = [
  "evil",
  "example",
  "python"
] }
insta.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["fs", "macros"] }
wiremock = "0.6.5"

[features]
# enable all architectures in cranelift/wasmtime
all-arch = ["wasmtime/all-arch"]

[lints]
workspace = true
