[project]
name = "datafusion-udf-wasm-tooling"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
  "numpy",
  "pip",
  "polars",
  "ruff",
  "scikit-learn",
  "ty",
  "yamllint",
]

[project.scripts]
analyze-udf-overhead-bench = "datafusion_udf_wasm_tooling.analyze_udf_overhead_bench:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
required-version = "==0.9.*"
