[package]
name = "datafusion-udf-wasm-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
datafusion.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion-sql.workspace = true
datafusion-udf-wasm-host = { path = "../host" }
insta = "1.43.2"
sqlparser.workspace = true
tokio.workspace = true


[lints]
workspace = true
