[package]
name = "datafusion-udf-wasm-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
datafusion-common.workspace = true
datafusion-execution.workspace = true
datafusion-expr.workspace = true
datafusion-sql.workspace = true
datafusion-udf-wasm-host.workspace = true
sqlparser.workspace = true
tokio.workspace = true

[dev-dependencies]
datafusion.workspace = true
datafusion-udf-wasm-bundle = { workspace = true, features = ["python"] }
datafusion-udf-wasm-host = { workspace = true }
insta.workspace = true

[lints]
workspace = true
