[package]
name = "datafusion-udf-wasm-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
# these need to be marked as build dependencies so the build script reruns whenever they change
datafusion-udf-wasm-evil = { workspace = true, optional = true }
datafusion-udf-wasm-guest = { workspace = true, optional = true }
datafusion-udf-wasm-python = { workspace = true, optional = true }
# the actual build-time dependencies
serde_json = "1.0.146"

[features]
evil = ["dep:datafusion-udf-wasm-evil"]
example = ["dep:datafusion-udf-wasm-guest"]
python = ["dep:datafusion-udf-wasm-python"]

[lints]
workspace = true
