[package]
name = "datafusion-udf-wasm-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow.workspace = true
chrono.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion-udf-wasm-guest.workspace = true
pyo3.workspace = true
uuid.workspace = true
wasip2.workspace = true

[build-dependencies]
tar.workspace = true
walkdir = "2.5.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.2"
flate2 = "1.0"

[lints]
workspace = true
