[package]
name = "datafusion-udf-wasm-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow.workspace = true
chrono.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion-udf-wasm-guest.workspace = true
pyo3.workspace = true
uuid.workspace = true
wasip2.workspace = true

[build-dependencies]
flate2 = "1.0.35"
sha2 = "0.10.8"
tar.workspace = true
ureq = "2.12.1"
walkdir = "2.5.0"

[lints]
workspace = true
