[package]
name = "datafusion-udf-wasm-guest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion-udf-wasm-arrow2bytes = { path = "../../arrow2bytes" }
wit-bindgen.workspace = true

[[example]]
name = "add_one"
crate-type = ["cdylib"]
