[package]
name = "datafusion-udf-wasm-guest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arrow.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion-udf-wasm-arrow2bytes.workspace = true
wit-bindgen.workspace = true

once_cell = { version = "1", default-features = false, features = ["alloc", "default", "race", "std"] }

[build-dependencies]
libc = { version = "0.2", default-features = false, features = ["default", "std"] }
syn = { version = "2", default-features = false, features = ["clone-impls", "default", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro", "visit-mut"] }

[[example]]
name = "add_one"
crate-type = ["cdylib"]
