[package]
name = "datafusion-udf-wasm-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[example]]
crate-type = ["cdylib"]
name = "add_one"

[[example]]
crate-type = ["cdylib"]
name = "sub_str"

[dependencies]
arrow.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion-udf-wasm-arrow2bytes.workspace = true
wit-bindgen.workspace = true

[lints]
workspace = true
